add results of Q8-Q11

--- a/sections/sec-expt.tex
+++ b/sections/sec-expt.tex
@@ -333,11 +333,12 @@ The results are listed in \cref{table:stateofartSoc}. The average accuracy using
 			$Q_{nl5}$ & 49.19    & 49.90         & 30.78        & \textbf{62.58} \\ 
 			$Q_{nl6}$ & 20.56    & 18.70         & 30.0         & \textbf{93.33} \\ 
 			$Q_{nl7}$ & 11.08    & 12.63         & 36.69        & \textbf{50.60} \\\Xhline{0.7pt} 
-			$Q_{nl8}$ &     &           &          &   \\
-			$Q_{nl9}$ &     &           &          &   \\
-			$Q_{nl10}$ &      &           &          &   \\
-			$Q_{nl11}$ &      &           &          &   \\ \Xhline{0.7pt} 
-			Avg.       & 46.40    & 49.11         & 51.08        & \textbf{66.75} \\
+			$Q_{nl8}$ &     &           &          &  81.58 \\
+			$Q_{nl9}$ &     &           &          & 89.47  \\
+			$Q_{nl10}$ &      &           &          & 92.11  \\
+			$Q_{nl11}$ &      &           &          & 	89.47   \\ \Xhline{0.7pt} 
+			%Avg.       & 46.40    & 49.11         & 51.08        & \textbf{66.75} \\
+			Avg.       & xx    & xx         & xx        & \textbf{xx} \\
 			\Xhline{1pt}
 		\end{tabular}
 	\caption{\color{red}Performance comparison on Soccer dataset (\%).}
