--- a/iccv2019.tex
+++ b/iccv2019.tex
@@ -49,9 +49,8 @@
 % run, let it finish, and you should be clear).
 \usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false]{hyperref}
 \usepackage[capitalise]{cleveref}
-%\Crefname{equation}{Eq.}{Eqs.}
-%\Crefname{figure}{Fig.}{Figs.}
-\Crefname{table}{Tab.}{Tabs.}
+\crefname{table}{Tab.}{Tabs.}
+\Crefname{table}{Table}{Tables}
 % \iccvfinalcopy % *** Uncomment this line for the final submission
 
 \def\iccvPaperID{954} % *** Enter the ICCV Paper ID here
