--- a/sections/sec-related.tex
+++ b/sections/sec-related.tex
@@ -28,7 +28,7 @@ These prior works show that detecting all visual objects, their attributes and r
 }%20190305
 
 
-\etitle{Graph-based \vqa}. ~\cite{TuMLCZ14} proposes a framework to understand events and answer user queries, where underlying knowledge is represented by a spatial-temporal-causal And-Or graph (S/T/C-AOG). \cite{yi2018neural} recovers a structural scene symbolization from the image which is similar to graph representation, and learns a program trace from the question, which is later executed on the scene representation to obtain the answer. Our method differs in the way of answer retrieval by graph matching instead of program execution, furthermore, our method incorporates an inference graph to infer the missing values which turns out to improve the performance significantly. \cite{wang2018fvqa} conducts question-query mapping and then query-KB matching which is most similar to our method. Our model is different from {\color{red}[]} in that we implement reinforcement learning to make both visual processing and query generation more efficiently. Another strength of our method, again, is the introduction of inference graph which leads to powerful reasoning capability.
+\etitle{Graph-based \vqa}. ~\cite{TuMLCZ14} proposes a framework to understand events and answer user queries, where underlying knowledge is represented by a spatial-temporal-causal And-Or graph (S/T/C-AOG). \cite{yi2018neural} recovers a structural scene symbolization from the image which is similar to graph representation, and learns a program trace from the question, which is later executed on the scene representation to obtain the answer. Our method differs in the way of answer retrieval by graph matching instead of program execution, furthermore, our method incorporates an inference graph to infer the missing values which turns out to improve the performance significantly. \cite{wang2018fvqa} conducts question-query mapping and then query-KB matching which is most similar to our method. Our model is different from \cite{peixi2019} in that we implement reinforcement learning to make both visual processing and query generation more efficiently. Another strength of our method, again, is the introduction of inference graph which leads to powerful reasoning capability.
 
 \eat{%20190318
 Query answering has been extensively studied for graph data. In a nutshell, this work includes two aspects: query understanding, and query evaluation. We next review previous work on two aspects. 
