--- a/egbib.bib
+++ b/egbib.bib
@@ -1,15 +1,133 @@
+% Encoding: UTF-8
+
+@inproceedings{DBLP:conf/nips/DaiLHS16,
+  author    = {Jifeng Dai and
+               Yi Li and
+               Kaiming He and
+               Jian Sun},
+  title     = {{R-FCN:} Object Detection via Region-based Fully Convolutional Networks},
+  booktitle = {Advances in Neural Information Processing Systems 29: Annual Conference
+               on Neural Information Processing Systems 2016, December 5-10, 2016,
+               Barcelona, Spain},
+  pages     = {379--387},
+  year      = {2016},
+  crossref  = {DBLP:conf/nips/2016},
+  url       = {http://papers.nips.cc/paper/6465-r-fcn-object-detection-via-region-based-fully-convolutional-networks},
+  timestamp = {Fri, 12 May 2017 13:30:20 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/nips/DaiLHS16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/eccv/LiuAESRFB16,
+  author    = {Wei Liu and
+               Dragomir Anguelov and
+               Dumitru Erhan and
+               Christian Szegedy and
+               Scott E. Reed and
+               Cheng{-}Yang Fu and
+               Alexander C. Berg},
+  title     = {{SSD:} Single Shot MultiBox Detector},
+  booktitle = {Computer Vision - {ECCV} 2016 - 14th European Conference, Amsterdam,
+               The Netherlands, October 11-14, 2016, Proceedings, Part {I}},
+  pages     = {21--37},
+  year      = {2016},
+  crossref  = {DBLP:conf/eccv/2016-1},
+  url       = {https://doi.org/10.1007/978-3-319-46448-0\_2},
+  doi       = {10.1007/978-3-319-46448-0\_2},
+  timestamp = {Fri, 02 Jun 2017 20:49:18 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/eccv/LiuAESRFB16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cvpr/MathePS16,
+  author    = {Stefan Mathe and
+               Aleksis Pirinen and
+               Cristian Sminchisescu},
+  title     = {Reinforcement Learning for Visual Object Detection},
+  booktitle = {2016 {IEEE} Conference on Computer Vision and Pattern Recognition,
+               {CVPR} 2016, Las Vegas, NV, USA, June 27-30, 2016},
+  pages     = {2894--2902},
+  year      = {2016},
+  crossref  = {DBLP:conf/cvpr/2016},
+  url       = {https://doi.org/10.1109/CVPR.2016.316},
+  doi       = {10.1109/CVPR.2016.316},
+  timestamp = {Thu, 25 May 2017 00:41:28 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/cvpr/MathePS16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/nips/MnihHGK14,
+  author    = {Volodymyr Mnih and
+               Nicolas Heess and
+               Alex Graves and
+               Koray Kavukcuoglu},
+  title     = {Recurrent Models of Visual Attention},
+  booktitle = {Advances in Neural Information Processing Systems 27: Annual Conference
+               on Neural Information Processing Systems 2014, December 8-13 2014,
+               Montreal, Quebec, Canada},
+  pages     = {2204--2212},
+  year      = {2014},
+  crossref  = {DBLP:conf/nips/2014},
+  url       = {http://papers.nips.cc/paper/5542-recurrent-models-of-visual-attention},
+  timestamp = {Wed, 10 Dec 2014 21:34:12 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/nips/MnihHGK14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cvpr/GoodrichA12,
+  author    = {Benjamin Goodrich and
+               Itamar Arel},
+  title     = {Reinforcement learning based visual attention with application to face detection},
+  booktitle = {2012 {IEEE} Computer Society Conference on Computer Vision and Pattern
+               Recognition Workshops, Providence, RI, USA, June 16-21, 2012},
+  pages     = {19--24},
+  year      = {2012},
+  crossref  = {DBLP:conf/cvpr/2012w},
+  url       = {https://doi.org/10.1109/CVPRW.2012.6239177},
+  doi       = {10.1109/CVPRW.2012.6239177},
+  timestamp = {Wed, 06 Feb 2019 10:30:30 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/cvpr/GoodrichA12},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cvpr/RenWZLL17,
+  author    = {Zhou Ren and
+               Xiaoyu Wang and
+               Ning Zhang and
+               Xutao Lv and
+               Li{-}Jia Li},
+  title     = {Deep Reinforcement Learning-Based Image Captioning with Embedding
+               Reward},
+  booktitle = {2017 {IEEE} Conference on Computer Vision and Pattern Recognition,
+               {CVPR} 2017, Honolulu, HI, USA, July 21-26, 2017},
+  pages     = {1151--1159},
+  year      = {2017},
+  crossref  = {DBLP:conf/cvpr/2017},
+  url       = {https://doi.org/10.1109/CVPR.2017.128},
+  doi       = {10.1109/CVPR.2017.128},
+  timestamp = {Tue, 14 Nov 2017 17:15:06 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/cvpr/RenWZLL17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/aaai/AbtahiF11,
+  author    = {Farnaz Abtahi and
+               Ian R. Fasel},
+  title     = {Deep Belief Nets as Function Approximators for Reinforcement Learning},
+  booktitle = {Lifelong Learning, Papers from the 2011 {AAAI} Workshop, San Francisco,
+               California, USA, August 7, 2011},
+  year      = {2011},
+  crossref  = {DBLP:conf/aaai/2011learning},
+  url       = {http://www.aaai.org/ocs/index.php/WS/AAAIW11/paper/view/3898},
+  timestamp = {Thu, 14 Apr 2016 20:10:47 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/aaai/AbtahiF11},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 @misc{Authors14,
  author = {Authors},
  title = {The frobnicatable foo filter},
  note = {Face and Gesture  submission ID 324. Supplied as additional material {\tt fg324.pdf}},
- year = 2014
-}
-
-@misc{Authors14b,
- author = {Authors},
- title = {Frobnication tutorial},
- note = {Supplied as additional material {\tt tr.pdf}},
  year = 2014
 }
 
@@ -21,11 +139,11 @@
 
 http://visualgenome.org
 
-@misc{Authors14b,
- author = {Authors},
- title = {Frobnication tutorial},
- note = {Supplied as additional material {\tt tr.pdf}},
- year = 2014
+@Misc{Authors2014,
+  author = {Authors},
+  title  = {Frobnication tutorial},
+  year   = {2014},
+  note   = {Supplied as additional material {\tt tr.pdf}},
 }
 
 @article{Alpher02,
@@ -64,17 +182,6 @@ author = {Stanislaw Antol and Aishwarya Agrawal and Jiasen Lu and Margaret Mitch
 title = {{VQA}: {V}isual {Q}uestion {A}nswering}, 
 booktitle = {International Conference on Computer Vision (ICCV)},
 year = {2015}, 
-}
-
-@article{DBLP:journals/corr/AndreasRDK15,
-  author    = {Jacob Andreas and
-               Marcus Rohrbach and
-               Trevor Darrell and
-               Dan Klein},
-  title     = {Deep Compositional Question Answering with Neural Module Networks},
-  journal   = {CoRR},
-  volume    = {abs/1511.02799},
-  year      = {2015}
 }
 
 @misc{Lu2015,
@@ -133,8 +240,7 @@ commit = {6c91cb9}
   pages={1--9},
   year={2015}
 }
-
-% @InProceedings{Antol_2015_ICCV,
+{Antol_2015_ICCV,
 % author = {Stanislaw Antol and Aishwarya Agrawal and Jiasen Lu and Margaret Mitchell and Dhruv Batra and C. Lawrence Zitnick and Devi Parikh},
 % title = {VQA: Visual Question Answering},
 % booktitle = {The IEEE International Conference on Computer Vision (ICCV)},
@@ -171,15 +277,6 @@ year = {2016}
   journal={CoRR, abs/1704.05526},
   volume={3},
   year={2017}
-}
-
-
-@InProceedings{malinowski2015ask,
-  author    = {Malinowski, Mateusz and Rohrbach, Marcus and Fritz, Mario},
-  title     = {Ask your neurons: A neural-based approach to answering questions about images},
-  booktitle = {Proceedings of the IEEE international conference on computer vision},
-  year      = {2015},
-  pages     = {1--9},
 }
 
 @Article{ren2015image,
@@ -232,45 +329,6 @@ year = {2016}
  address = {Cambridge, MA, USA},
 }
 
-@inproceedings{DBLP:conf/nips/DaiLHS16,
-  author    = {Jifeng Dai and
-               Yi Li and
-               Kaiming He and
-               Jian Sun},
-  title     = {{R-FCN:} Object Detection via Region-based Fully Convolutional Networks},
-  booktitle = {Advances in Neural Information Processing Systems 29: Annual Conference
-               on Neural Information Processing Systems 2016, December 5-10, 2016,
-               Barcelona, Spain},
-  pages     = {379--387},
-  year      = {2016},
-  crossref  = {DBLP:conf/nips/2016},
-  url       = {http://papers.nips.cc/paper/6465-r-fcn-object-detection-via-region-based-fully-convolutional-networks},
-  timestamp = {Fri, 12 May 2017 13:30:20 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/nips/DaiLHS16},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@inproceedings{DBLP:conf/eccv/LiuAESRFB16,
-  author    = {Wei Liu and
-               Dragomir Anguelov and
-               Dumitru Erhan and
-               Christian Szegedy and
-               Scott E. Reed and
-               Cheng{-}Yang Fu and
-               Alexander C. Berg},
-  title     = {{SSD:} Single Shot MultiBox Detector},
-  booktitle = {Computer Vision - {ECCV} 2016 - 14th European Conference, Amsterdam,
-               The Netherlands, October 11-14, 2016, Proceedings, Part {I}},
-  pages     = {21--37},
-  year      = {2016},
-  crossref  = {DBLP:conf/eccv/2016-1},
-  url       = {https://doi.org/10.1007/978-3-319-46448-0\_2},
-  doi       = {10.1007/978-3-319-46448-0\_2},
-  timestamp = {Fri, 02 Jun 2017 20:49:18 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/eccv/LiuAESRFB16},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
 @inproceedings{yao2017boosting,
   title={Boosting image captioning with attributes},
   author={Yao, Ting and Pan, Yingwei and Li, Yehao and Qiu, Zhaofan and Mei, Tao},
@@ -305,42 +363,24 @@ year = {2016}
   volume={abs/1511.02799}
 }
 
-@inproceedings{Ren2015ExploringMA,
-  title={Exploring Models and Data for Image Question Answering},
-  author={Mengye Ren and Ryan Kiros and Richard S. Zemel},
-  booktitle={NIPS},
-  year={2015}
-}
-
-@article{Krishna:2017:VGC:3088990.3089101,
- author = {Krishna, Ranjay and Zhu, Yuke and Groth, Oliver and Johnson, Justin and Hata, Kenji and Kravitz, Joshua and Chen, Stephanie and Kalantidis, Yannis and Li, Li-Jia and Shamma, David A. and Bernstein, Michael S. and Fei-Fei, Li},
- title = {Visual Genome: Connecting Language and Vision Using Crowdsourced Dense Image Annotations},
- journal = {Int. J. Comput. Vision},
- issue_date = {May       2017},
- volume = {123},
- number = {1},
- month = may,
- year = {2017},
- issn = {0920-5691},
- pages = {32--73},
- numpages = {42},
- url = {https://doi.org/10.1007/s11263-016-0981-7},
- doi = {10.1007/s11263-016-0981-7},
- acmid = {3089101},
- publisher = {Kluwer Academic Publishers},
- address = {Hingham, MA, USA},
- keywords = {Attributes, Computer vision, Crowdsourcing, Dataset, Image, Knowledge, Language, Objects, Question answering, Relationships, Scene graph},
-} 
-
-@incollection{NIPS2014_5411,
-title = {A Multi-World Approach to Question Answering about Real-World Scenes based on Uncertain Input},
-author = {Malinowski, Mateusz and Fritz, Mario},
-booktitle = {Advances in Neural Information Processing Systems 27},
-editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
-pages = {1682--1690},
-year = {2014},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/5411-a-multi-world-approach-to-question-answering-about-real-world-scenes-based-on-uncertain-input.pdf}
+@Article{Krishna:2017:VGC:3088990.3089101,
+  author     = {Krishna, Ranjay and Zhu, Yuke and Groth, Oliver and Johnson, Justin and Hata, Kenji and Kravitz, Joshua and Chen, Stephanie and Kalantidis, Yannis and Li, Li-Jia and Shamma, David A. and Bernstein, Michael S. and Fei-Fei, Li},
+  title      = {Visual Genome: Connecting Language and Vision Using Crowdsourced Dense Image Annotations},
+  journal    = {International Journal of Computer Vision},
+  year       = {2017},
+  volume     = {123},
+  number     = {1},
+  pages      = {32--73},
+  month      = may,
+  issn       = {0920-5691},
+  acmid      = {3089101},
+  address    = {Hingham, MA, USA},
+  doi        = {10.1007/s11263-016-0981-7},
+  issue_date = {May 2017},
+  keywords   = {Attributes, Computer vision, Crowdsourcing, Dataset, Image, Knowledge, Language, Objects, Question answering, Relationships, Scene graph},
+  numpages   = {42},
+  publisher  = {Kluwer Academic Publishers},
+  url        = {https://doi.org/10.1007/s11263-016-0981-7},
 }
 
 @inproceedings{DBLP:conf/cvpr/NamHK17,
@@ -394,16 +434,7 @@ url = {http://papers.nips.cc/paper/5411-a-multi-world-approach-to-question-answe
   publisher = {{IEEE} Computer Society},
   year      = {2017}
 }
-
-% @InProceedings{balanced_vqa_v2, 
-% author = {Yash Goyal and Tejas Khot and Douglas Summers{-}Stay and Dhruv Batra and Devi Parikh}, 
-% title = {Making the {V} in {VQA} Matter: Elevating the Role of Image Understanding in {V}isual {Q}uestion {A}nswering}, 
-% booktitle = {Conference on Computer Vision and Pattern Recognition (CVPR)}, 
-% year = {2017}, 
-% } 
-
-----------------------------Introduction-----------------------------------
-% @InProceedings{antol2015vqa,
+{antol2015vqa,
 %   author    = {Antol, Stanislaw and Agrawal, Aishwarya and Lu, Jiasen and Mitchell, Margaret and Batra, Dhruv and Lawrence Zitnick, C and Parikh, Devi},
 %   title     = {Vqa: Visual question answering},
 %   booktitle = {Proceedings of the IEEE international conference on computer vision},
@@ -436,8 +467,8 @@ url = {http://papers.nips.cc/paper/5411-a-multi-world-approach-to-question-answe
   volume    = {3},
 }
 
-@Article{fukui2016multimodal,
-author  = {Fukui, Akira and Park, Dong Huk and Yang, Daylen and Rohrbach, Anna and Darrell, Trevor and Rohrbach, Marcus},
+@Article{Fukui2016,
+  author  = {Fukui, Akira and Park, Dong Huk and Yang, Daylen and Rohrbach, Anna and Darrell, Trevor and Rohrbach, Marcus},
   title   = {Multimodal compact bilinear pooling for visual question answering and visual grounding},
   journal = {arXiv preprint arXiv:1606.01847},
   year    = {2016},
@@ -468,7 +499,7 @@ author  = {Fukui, Akira and Park, Dong Huk and Yang, Daylen and Rohrbach, Anna a
   url       = {http://dx.doi.org/10.1109/CVPR.2017.670},
 }
 
-@Article{teney2017graph,
+@Article{Teney2017,
   author  = {Teney, Damien and Liu, Lingqiao and van den Hengel, Anton},
   title   = {Graph-structured representations for visual question answering},
   journal = {arXiv preprint},
@@ -703,11 +734,11 @@ month = {Oct},
 year = {2017}
 }
 
-@inproceedings{hu2017learning,
-  title={Learning to Reason: End-to-End Module Networks for Visual Question Answering},
-  author={Hu, Ronghang and Andreas, Jacob and Rohrbach, Marcus and Darrell, Trevor and Saenko, Kate},
-  booktitle={Proceedings of the IEEE International Conference on Computer Vision (ICCV)},
-  year={2017}
+@InProceedings{Hu2017,
+  author    = {Hu, Ronghang and Andreas, Jacob and Rohrbach, Marcus and Darrell, Trevor and Saenko, Kate},
+  title     = {Learning to Reason: End-to-End Module Networks for Visual Question Answering},
+  booktitle = {Proceedings of the IEEE International Conference on Computer Vision (ICCV)},
+  year      = {2017},
 }
 
 @article{fukui16mcb,
@@ -715,77 +746,6 @@ year = {2017}
   author={Fukui, Akira and Park, Dong Huk and Yang, Daylen and Rohrbach, Anna and Darrell, Trevor and Rohrbach, Marcus},
   journal={arXiv:1606.01847},
   year={2016},
-}
-
-@inproceedings{DBLP:conf/cvpr/MathePS16,
-  author    = {Stefan Mathe and
-               Aleksis Pirinen and
-               Cristian Sminchisescu},
-  title     = {Reinforcement Learning for Visual Object Detection},
-  booktitle = {2016 {IEEE} Conference on Computer Vision and Pattern Recognition,
-               {CVPR} 2016, Las Vegas, NV, USA, June 27-30, 2016},
-  pages     = {2894--2902},
-  year      = {2016},
-  crossref  = {DBLP:conf/cvpr/2016},
-  url       = {https://doi.org/10.1109/CVPR.2016.316},
-  doi       = {10.1109/CVPR.2016.316},
-  timestamp = {Thu, 25 May 2017 00:41:28 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/cvpr/MathePS16},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@inproceedings{DBLP:conf/nips/MnihHGK14,
-  author    = {Volodymyr Mnih and
-               Nicolas Heess and
-               Alex Graves and
-               Koray Kavukcuoglu},
-  title     = {Recurrent Models of Visual Attention},
-  booktitle = {Advances in Neural Information Processing Systems 27: Annual Conference
-               on Neural Information Processing Systems 2014, December 8-13 2014,
-               Montreal, Quebec, Canada},
-  pages     = {2204--2212},
-  year      = {2014},
-  crossref  = {DBLP:conf/nips/2014},
-  url       = {http://papers.nips.cc/paper/5542-recurrent-models-of-visual-attention},
-  timestamp = {Wed, 10 Dec 2014 21:34:12 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/nips/MnihHGK14},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@inproceedings{DBLP:conf/cvpr/GoodrichA12,
-  author    = {Benjamin Goodrich and
-               Itamar Arel},
-  title     = {Reinforcement learning based visual attention with application to face detection},
-  booktitle = {2012 {IEEE} Computer Society Conference on Computer Vision and Pattern
-               Recognition Workshops, Providence, RI, USA, June 16-21, 2012},
-  pages     = {19--24},
-  year      = {2012},
-  crossref  = {DBLP:conf/cvpr/2012w},
-  url       = {https://doi.org/10.1109/CVPRW.2012.6239177},
-  doi       = {10.1109/CVPRW.2012.6239177},
-  timestamp = {Wed, 06 Feb 2019 10:30:30 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/cvpr/GoodrichA12},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@inproceedings{DBLP:conf/cvpr/RenWZLL17,
-  author    = {Zhou Ren and
-               Xiaoyu Wang and
-               Ning Zhang and
-               Xutao Lv and
-               Li{-}Jia Li},
-  title     = {Deep Reinforcement Learning-Based Image Captioning with Embedding
-               Reward},
-  booktitle = {2017 {IEEE} Conference on Computer Vision and Pattern Recognition,
-               {CVPR} 2017, Honolulu, HI, USA, July 21-26, 2017},
-  pages     = {1151--1159},
-  year      = {2017},
-  crossref  = {DBLP:conf/cvpr/2017},
-  url       = {https://doi.org/10.1109/CVPR.2017.128},
-  doi       = {10.1109/CVPR.2017.128},
-  timestamp = {Tue, 14 Nov 2017 17:15:06 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/cvpr/RenWZLL17},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 
@@ -823,20 +783,6 @@ month={July},}
   author = {Yuke Zhu and Roozbeh Mottaghi and Eric Kolve and Joseph J. Lim and Abhinav Gupta and Li Fei-Fei and Ali Farhadi},
   booktitle = {{IEEE International Conference on Robotics and Automation}},
   year = 2017,
-}
-
-@inproceedings{DBLP:conf/aaai/AbtahiF11,
-  author    = {Farnaz Abtahi and
-               Ian R. Fasel},
-  title     = {Deep Belief Nets as Function Approximators for Reinforcement Learning},
-  booktitle = {Lifelong Learning, Papers from the 2011 {AAAI} Workshop, San Francisco,
-               California, USA, August 7, 2011},
-  year      = {2011},
-  crossref  = {DBLP:conf/aaai/2011learning},
-  url       = {http://www.aaai.org/ocs/index.php/WS/AAAIW11/paper/view/3898},
-  timestamp = {Thu, 14 Apr 2016 20:10:47 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/aaai/AbtahiF11},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @incollection{NIPS2017_7084,
@@ -888,3 +834,5 @@ url = {http://papers.nips.cc/paper/7007-a-unified-game-theoretic-approach-to-mul
   year={2018},
   publisher={IEEE}
 }
+
+@Comment{jabref-meta: databaseType:bibtex;}
