modify fig.1 and fig. 2, and some issues

--- a/iccv2019.tex
+++ b/iccv2019.tex
@@ -61,7 +61,10 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{Visual Question Answering with Question Understanding and Reasoning}
+\title{
+	%Visual Question Answering with Question Understanding and Reasoning
+	Learning Question-oriented Vision for Generalizable VQA
+}
 
 \author{First Author\\
 Institution1\\
