--- a/sections/sec-related.tex
+++ b/sections/sec-related.tex
@@ -6,7 +6,10 @@ We categorize related work into following three parts. %: visual query answering
 
 
 \etitle{Visual query answering}. Current \vqa approaches are mainly based on deep neural works.  \cite{zhu2016visual7w} introduces a spatial attention mechanism similar to the model for image captioning. %In this method, a weight vector is computed and served as an additional input at each time step of the LSTM model. 
-Instead of computing the attention vector iteratively, \cite{xu2016ask} obtains a global spatial attention weights vector which is then used to generate a new image embedding. \cite{zhu2017structured} proposed to model the visual attention as a multivariate distribution over a grid-structured conditional random field on image regions, thus multiple regions can be selected at the same time. This attention mechanism is called structured multivariate attention in~\cite{zhu2017structured}.
+Instead of computing the attention vector iteratively, \cite{xu2016ask} obtains a global spatial attention weights vector which is then used to generate a new image embedding. 
+\eat{
+\cite{zhu2017structured} proposed to model the visual attention as a multivariate distribution over a grid-structured conditional random field on image regions, thus multiple regions can be selected at the same time. This attention mechanism is called structured multivariate attention in~\cite{zhu2017structured}.
+}
 There has been many other improvements to the standard deep learning method, \eg %compared to element-wise product or concatenation of the visual and textual representations,
 \cite{fukui2016multimodal} utilized Multimodal Compact Bilinear (MCB) pooling to efficiently and expressively combine multimodal features. Another interesting idea is the implementation of Neural Module Networks~\cite{Andreas_2016,hu2017learning}, which decomposes queries into their linguistic substructures, and uses these structures to dynamically instantiate module networks. %Question-specific deep network is then assembled from these module networks that each solve one subtask. The layout of module networks can either be constructed from off-the-shelf parses~\cite{Andreas_2016}, or learned from the data~\cite{hu2017learning}.
 \cite{teney2017graph} proposed to build graph over scene objects and question words. The visual graph is similar to ours, but the query graph differs. %\cite{teney2017graph} exploits the grammatical relations between words to generate query graph, while our method applies directed acyclic graph to represent query sentence. 
@@ -17,7 +20,7 @@ Note that the method \cite{teney2017graph} proposed is still a neural network ba
 models which accumulate evidence collected at a small set of
 image locations to detect visual objects effectively.~\cite{DBLP:conf/cvpr/GoodrichA12} forms the facial detection problem into an adaptive learning process, by designing an approximate optimal control framework, based on reinforcement learning to actively search a visual field.~\cite{DBLP:conf/nips/MnihHGK14} proposed a novel recurrent neural network model which is capable to extract information from an image or video by adaptive selection for a sequence of regions or locations.~\cite{zhu2017icra} introduces reinforcement learning in the task of target-driven visual navigation. Other works aim at achieving {\color{red}XXX} based on algorithms~\cite{5596468,DBLP:conf/aaai/AbtahiF11}.
 
-In visual and language domain, relevant work like~\cite{DBLP:conf/cvpr/RenWZLL17} achieves image captioning with Embedding Reward. Reinforcement learning preserves ability to effectively select preferred actions, which benefits the system decomposing the problem into a few sub-tasks.
+In visual and language domain, relevant work like~\cite{DBLP:conf/cvpr/RenWZLL17} achieves image captioning with Embedding Reward. Reinforcement learning preserves ability to effectively select preferred actions, which benefits the system in decomposing the problem into a few sub-tasks.
 
 
 \eat{%20190305
@@ -28,7 +31,7 @@ These prior works show that detecting all visual objects, their attributes and r
 }%20190305
 
 
-\etitle{Graph-based \vqa}. ~\cite{TuMLCZ14} proposes a framework to understand events and answer user queries, where underlying knowledge is represented by a spatial-temporal-causal And-Or graph (S/T/C-AOG). \cite{yi2018neural} recovers a structural scene symbolization from the image which is similar to graph representation, and learns a program trace from the question, which is later executed on the scene representation to obtain the answer. Our method differs in the way of answer retrieval by graph matching instead of program execution, furthermore, our method incorporates an inference graph to infer the missing values which turns out to improve the performance significantly. \cite{wang2018fvqa} conducts question-query mapping and then query-KB matching which is most similar to our method. Our model is different from \cite{peixi2019} in that we implement reinforcement learning to make both visual processing and query generation more efficiently. Another strength of our method, again, is the introduction of inference graph which leads to powerful reasoning capability.
+\etitle{Graph-based \vqa}. ~\cite{TuMLCZ14} proposes a framework to understand events and answer user queries, where underlying knowledge is represented by a spatial-temporal-causal And-Or graph (S/T/C-AOG). \cite{yi2018neural} recovers a structural scene symbolization from the image which is similar to graph representation, and learns a program trace from the question, which is later executed on the scene representation to obtain the answer. Our method differs in the way of answer retrieval by graph matching instead of program execution, furthermore, our method incorporates an inference graph to infer the missing values which turns out to improve the performance significantly. \cite{wang2018fvqa} conducts question-query mapping and then query-KB matching which is most similar to our method. Our model is different from \cite{wang2018fvqa} in that we implement reinforcement learning to make both visual processing and query generation more efficiently. Another strength of our method, again, is the introduction of inference graph which leads to powerful reasoning capability.
 
 \eat{%20190318
 Query answering has been extensively studied for graph data. In a nutshell, this work includes two aspects: query understanding, and query evaluation. We next review previous work on two aspects. 
